--- a/docs/style.css
+++ b/docs/style.css
@@ -8,7 +8,9 @@ position: relative;
 	  -moz-box-sizing: border-box;
 	  box-sizing: border-box;
 }
-
+h2{
+	text-align:center
+}
 text {
 	pointer-events: none;
 }
@@ -51,4 +53,5 @@ fill: #aaa;
 	font-size: x-small;
 padding: 5px;
 	 font-family: "Open Sans", Helvetica, Arial, sans-serif; 
+	 color:white;
 }
